--- a/pytest.ini
+++ b/pytest.ini
@@ -4,5 +4,9 @@ markers =
     smoke: marker for smoke tests
     regression: marker for regression tests
 
+
+    search:
+    article:
+
     dev: marker for creating tests
     dev0: marker for difficult tests
